# tcp-1553-bus-analyzer

./: CMakeLists.txt  README.md  test_bm_crash.cpp
scripts/: build.sh  clean.sh  run.sh  setup_permissions.sh
src/: app.cpp  app.hpp
src/common/: common.hpp  logger.cpp  logger.hpp
src/core/: bc.cpp  bc.hpp  bm.cpp  bm.hpp  milStd1553.hpp  protocol.hpp  protocol_parser.cpp  protocol_parser.hpp  tcp_proxy.cpp  tcp_proxy.hpp
src/ui/: BusControllerPanel.cpp  BusControllerPanel.hpp  BusMonitorPanel.cpp  BusMonitorPanel.hpp  CreateFrameWindow.cpp  CreateFrameWindow.hpp  FrameComponent.cpp  FrameComponent.hpp  MainFrame.cpp  MainFrame.hpp  TcpConnectionPanel.cpp  TcpConnectionPanel.hpp
